--- a/templates/Dash0.html
+++ b/templates/Dash0.html
@@ -109,8 +109,9 @@
       <input type="number" min="1" max="3" step="1" id="autofix" name="autofix" placeholder=0  />
       <br>
       <form id="upload-form" action="/upload" method="POST" enctype="multipart/form-data">
-    <input type="file" name="file" id="file-input" onchange="document.getElementById('upload-form').submit();">
-    </form>
+          <input type="hidden" name="placement" value="{{ session['importfile'] }}">
+          <input type="file" name="importfile" id="file-input" onchange="document.getElementById('upload-form').submit();">
+      </form>
 
 
       Firstname: <input type="text" name="candfirst" placeholder=" {{ (formdata or {}).get('candfirst', '') }} "/><br>
