--- a/templates/Dash0.html
+++ b/templates/Dash0.html
@@ -121,28 +121,28 @@
 </div>
         <div class = "grid-container">
             <div class="grid-item">
-              <button type = "button" id = "b1" class = "small_btn" onclick="setActionForm('filelist',filelist='maps')">Maps</button>
+              <button type = "button" id = "b1" class = "small_btn" onclick="setActionForm('filelist',filelist='maps')">Boundary<br>Maps</button>
             </div>
             <div class="grid-item">
-              <button type = "button" id = "b2" class = "small_btn" onclick="setActionForm('filelist',filelist='results')">Results</button>
+              <button type = "button" id = "b2" class = "small_btn" onclick="setActionForm('filelist',filelist='results')">Election<br>Results</button>
             </div>
             <div class="grid-item">
-              <button type="button" id="b3" class="small_btn" >Electoral Roll</button>
+              <button type="button" id="b3" class="small_btn" >Electoral Rolls</button>
             </div>
             <div class="grid-item">
-              <button type = "button" id = "b4" class = "small_btn">Intention</button>
+              <button type = "button" id = "b4" class = "small_btn">Voter<br>Intention</button>
             </div>
             <div class="grid-item">
               <button type = "button" id = "b5" class = "big_btn">Telling</button>
             </div>
             <div class="grid-item">
-              <button type = "button" id = "b6" class = "big_btn">Teams</button>
+              <button type = "button" id = "b6" class = "big_btn">Delivery<br>Network</button>
             </div>
             <div class="grid-item">
               <button type = "button" id = "b7" class = "small_btn" >Search</button>
             </div>
             <div class="grid-item">
-              <button type = "button" id = "b8" class = "small_btn" >DASH</button>
+              <button type = "button" id = "b8" class = "small_btn" >DASHBOARD</button>
             </div>
 
           </div>
