--- a/templates/stream_processing_input.html
+++ b/templates/stream_processing_input.html
@@ -3,7 +3,8 @@
 {% block map %}
 <!-- Editable File Information Table -->
 <!-- Editable File Information Table -->
-<h2>Specify Electoral Roll Processing Streams for Each Election</h2>
+<h2>SELECT ELECTORAL ROLL FILE STREAMS FOR EACH ELECTION AREA</h2>
+<h2>(if you want the electors to attempt a load, select fix level 3)</h2>
 <button id="add-row-btn">Add Row</button>
 <button id="add-stream-btn">Add Stream</button>
 <button id="save-btn">Save</button>
@@ -68,10 +69,10 @@
                 <th>Stream</th>
                 <th>Filename</th>
                 <th>Field</th>
+                <th>P0</th>
                 <th>P1</th>
                 <th>P2</th>
                 <th>P3</th>
-                <th>Ready</th>
             </tr>
         </thead>
         <tbody>
@@ -82,22 +83,22 @@
                     <td>{{ row['Field'] }}</td>
                     <td>
                       <label class="maximpact-label">
-                      <input type="checkbox" class="maximpact-checkbox"{% if row['P1'] == 1 %}checked{% endif %} disabled>
+                      <input type="checkbox" class="maximpact-checkbox"{% if row['P0'] == 1 %}checked{% endif %} disabled>
                       </label>
                     </td>
                     <td>
                       <label class="maximpact-label">
-                      <input type="checkbox" {% if row['P2'] == 1 %}checked{% endif %} disabled>
+                      <input type="checkbox" class="maximpact-checkbox"{% if row['P1'] == 1 %}checked{% endif %} disabled>
                       </label>
                       </td>
                     <td>
                       <label class="maximpact-label">
-                      <input type="checkbox" {% if row['P3'] == 1 %}checked{% endif %} disabled>
+                      <input type="checkbox" class="maximpact-checkbox"{% if row['P2'] == 1 %}checked{% endif %} disabled>
                       </label>
                     </td>
                     <td>
                       <label class="maximpact-label">
-                      <input type="checkbox" {% if row['Ready'] == 1 %}checked{% endif %} disabled>
+                      <input type="checkbox" class="maximpact-checkbox"{% if row['P3'] == 1 %}checked{% endif %} disabled>
                       </label>
                     </td>
                 </tr>
@@ -180,14 +181,14 @@
       const filepath = filepathEl ? filepathEl.value : '';
 
       if (active && stream === normalizedInput) {
-        alert('inside active and stream: '+ filepath );
+//        alert('inside active and stream: '+ filepath );
 
         if (fileInput.files.length > 0) {
           const file = fileInput.files[0];
           formData.append('files', file);  // upload if picked this session
         } else if (filepath) {
           formData.append(`stored_path_${index}`, filepath);  // use stored safe path
-          alert('Filepath found: '+`stored_path_${index}` + filepath);
+//          alert('Filepath found: '+`stored_path_${index}` + filepath);
         } else {
           console.warn(`No file selected or stored path for stream '${stream}'`);
           return; // skip this row
