--- a/templates/Dash0.html
+++ b/templates/Dash0.html
@@ -146,7 +146,9 @@
             </div>
 
           </div>
+  <canvas id="streamChart" width="400" height="400"></canvas>
 
+  
   </div>
 {% endblock nav %}
 {% block captains %}
@@ -209,7 +211,6 @@
         // Change the iframe src to the stream processing input page
         document.getElementById("iframe1").src = "{{ url_for('stream_input') }}";
     });
-
 
 </script>
 
