--- a/templates/stream_processing_input.html
+++ b/templates/stream_processing_input.html
@@ -81,7 +81,8 @@
               </tr>
           {% endfor %}
           </tbody>
-    </table
+    </table>
+    <canvas id="streamChart" width="400" height="400"></canvas>
   </div>
 <div id="importTable" class="section">
     <table id="DQ-table">
@@ -364,6 +365,42 @@
         e.target.closest('tr').remove();
       }
     });
+    const ctx = document.getElementById('streamChart').getContext('2d');
 
+     const labels = {{ streamrag.keys() | list | tojson }};
+     const data = {{ streamrag.values() | map(attribute='Loaded') | list | tojson }};
+     const ragColors = {
+       red: 'rgba(255, 99, 132, 0.6)',
+       amber: 'rgba(255, 159, 64, 0.6)',
+       green: 'rgba(75, 192, 192, 0.6)'
+     };
+     const backgroundColors = {{ streamrag.values() | map(attribute='RAG') | list | tojson }}
+       .map(rag => ragColors[rag]);
+
+     new Chart(ctx, {
+       type: 'doughnut',
+       data: {
+         labels: labels,
+         datasets: [{
+           label: 'Loaded Files per Stream',
+           data: data,
+           backgroundColor: backgroundColors,
+           borderColor: '#fff',
+           borderWidth: 1
+         }]
+       },
+       options: {
+         responsive: true,
+         plugins: {
+           legend: {
+             position: 'right'
+           },
+           title: {
+             display: true,
+             text: 'Stream Loading Status'
+           }
+         }
+       }
+     });
 </script>
 {% endblock map %}
