--- a/templates/stream_processing_input.html
+++ b/templates/stream_processing_input.html
@@ -86,7 +86,7 @@
     </table>
   </div>
 <div>
-<canvas id="#streamChart" width="300" height="300"></canvas>
+<canvas id="streamChart" width="300" height="300"></canvas>
 </div>
 <div id="importTable" class="section">
     <table id="DQ-table">
@@ -369,42 +369,6 @@
         e.target.closest('tr').remove();
       }
     });
-    const ctx = document.getElementById('streamChart').getContext('2d');
 
-     const labels = {{ streamrag.keys() | list | tojson }};
-     const data = {{ streamrag.values() | map(attribute='Loaded') | list | tojson }};
-     const ragColors = {
-       red: 'rgba(255, 99, 132, 0.6)',
-       amber: 'rgba(255, 159, 64, 0.6)',
-       green: 'rgba(75, 192, 192, 0.6)'
-     };
-     const backgroundColors = {{ streamrag.values() | map(attribute='RAG') | list | tojson }}
-       .map(rag => ragColors[rag]);
-
-     new Chart(ctx, {
-       type: 'doughnut',
-       data: {
-         labels: labels,
-         datasets: [{
-           label: 'Loaded Files per Stream',
-           data: data,
-           backgroundColor: backgroundColors,
-           borderColor: '#fff',
-           borderWidth: 1
-         }]
-       },
-       options: {
-         responsive: true,
-         plugins: {
-           legend: {
-             position: 'right'
-           },
-           title: {
-             display: true,
-             text: 'Stream Loading Status'
-           }
-         }
-       }
-     });
 </script>
 {% endblock map %}
