--- a/templates/Dash0.html
+++ b/templates/Dash0.html
@@ -1,8 +1,6 @@
 {% extends "base.html" %}
 {% block map %}
 <div id="mapwin" class="innertube">
-    <h1>elecTrek - The Canvassing App</h1>
-    <h1>Welcome to your dashboard, {{ session['username'] }}</h1>
     <iframe id="iframe1" src= {{ url_for('map',path=mapfile) }} width="1200" height="800" onload="updateMessages()"> </iframe>
 </div>
 <script >
@@ -81,8 +79,9 @@
 
 {% block nav %}
 <div id="nav" >
+  <h1>Welcome to your elecTrek dashboard, {{ session['username'] }}</h1>
 
-        <h1>Map Data </h1>
+        <h1>Form Data </h1>
         {% for x, y in (formdata or {}).items() %}
         		<ul> {{ x }} : {{ y }} </ul>
         {% endfor %}
@@ -105,9 +104,7 @@
       <label for="GOTV">GOTV:</label>
       <input type="number" id="GOTV" name="GOTV" min="0.01" max="0.99" step="0.01"  />
       <br>
-      <label for="autofix">AutoFix:</label>
-      <input type="number" min="1" max="3" step="1" id="autofix" name="autofix" placeholder=0  />
-      <br>
+
       <form id="upload-form" action="/upload" method="POST" enctype="multipart/form-data">
           <input type="hidden" name="placement" value="{{ session['importfile'] }}">
           <input type="file" name="importfile" id="file-input" onchange="document.getElementById('upload-form').submit();">
@@ -148,7 +145,6 @@
           </div>
   <canvas id="streamChart" width="400" height="400"></canvas>
 
-  
   </div>
 {% endblock nav %}
 {% block captains %}
