--- a/templates/Dash0.html
+++ b/templates/Dash0.html
@@ -143,8 +143,9 @@
             </div>
 
           </div>
-  <canvas id="streamChart" width="400" height="400"></canvas>
-
+  <div>
+    <canvas id="streamChart" width="200" height="200"></canvas>
+  </div>
   </div>
 {% endblock nav %}
 {% block captains %}
@@ -171,7 +172,10 @@
 
 	    </table>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
 <script>
+
   const ctx = document.getElementById('streamChart').getContext('2d');
 
    const labels = {{ streamrag.keys() | list | tojson }};
