--- a/templates/Dash0.html
+++ b/templates/Dash0.html
@@ -143,9 +143,9 @@
             </div>
 
           </div>
-  <div>
-    <canvas id="streamChart" width="200" height="200"></canvas>
-  </div>
+        <div id="chartContainer" style="width: 200px; height: 200px;">
+          <canvas id="streamChart"></canvas>
+        </div>
   </div>
 {% endblock nav %}
 {% block captains %}
@@ -172,8 +172,7 @@
 
 	    </table>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
+<script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
 <script>
 
   const ctx = document.getElementById('streamChart').getContext('2d');
@@ -202,6 +201,7 @@
      },
      options: {
        responsive: true,
+       maintainAspectRatio: false,
        plugins: {
          legend: {
            position: 'right'
