--- a/static/style.css
+++ b/static/style.css
@@ -33,10 +33,6 @@
     background-color: #f1f1f1;
 }
 
-#streamChart {
-    width: 200px;
-    height: 200px;
-  }
 
 #file-info-table .order {
     width: 60px;  /* Ensures only 2-digit integers fit */
@@ -139,6 +135,17 @@ font-size: 1.5em;
 	    opacity: 0.8;
 			height: 800px;
 		}
+#chartContainer {
+  width: 250px;
+  height: 250px;
+  position: relative;
+}
+
+#streamChart {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
     #logwin {
 			width: 100%;
 	    height: 200px;  /* Adjust height as needed */
