--- a/templates/canvasscard1.html
+++ b/templates/canvasscard1.html
@@ -1,6 +1,13 @@
 {% extends "base.html" %}
 {% block body %}
-
+<div style="margin-top: 10px;">
+  <label for="selected-tag"><b>Tag of Interest:</b></label>
+  <select id="selected-tag" onchange="updateIsTagSetColumn()">
+    {% for tag in tag_options %}
+      <option value="{{ tag }}" {% if tag == selected_tag %}selected{% endif %}>{{ tag }}</option>
+    {% endfor %}
+  </select>
+</div>
 		<title>V3.3 electtrek canvassing</title>
 
 	<div id="header">
