--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,14 @@
       {% endblock %}
 </head>
 <body>
+  <div style="margin-top: 10px;">
+    <label for="selected-tag"><b>Tag of Interest:</b></label>
+    <select id="selected-tag" onchange="updateIsTagSetColumn()">
+      {% for tag in tag_options %}
+        <option value="{{ tag }}" {% if tag == selected_tag %}selected{% endif %}>{{ tag }}</option>
+      {% endfor %}
+    </select>
+  </div>
 
   {% block body %}
 
