--- a/templates/canvasscard1.html
+++ b/templates/canvasscard1.html
@@ -72,6 +72,14 @@
 
 	</div>
 	<div id="main" style="page-break-before: always;">
+		<div style="margin-top: 10px;">
+			<label for="selected-tag"><b>Tag of Interest:</b></label>
+			<select id="selected-tag" onchange="updateIsTagSetColumn()">
+				{% for tag in tag_options %}
+					<option value="{{ tag }}" {% if tag == selected_tag %}selected{% endif %}>{{ tag }}</option>
+				{% endfor %}
+			</select>
+		</div>
 	    <table id="canvass-table">
 				<thead>
 
