--- a/templates/Dash0.html
+++ b/templates/Dash0.html
@@ -95,6 +95,9 @@
       <label for="yourparty">Your Party:</label>
       <select name="yourparty" id="yourparty"></select><br>
 
+      <label for="selectedTag">Selected Tag:</label>
+      <select name="selectedTag" id="selectedTag"></select><br>
+
       <label for="walksize">Walk Size:</label>
       <input type="number" min="100" max="500" step="50" name="walksize" id="walksize" /><br>
 
@@ -155,6 +158,7 @@
 </div>
 
 <div id="datawin" class="innertube">
+
 	    <table id="captains-table">
 
       <thead>
