--- a/templates/canvasscard1.html
+++ b/templates/canvasscard1.html
@@ -72,14 +72,6 @@
 
 	</div>
 	<div id="main" style="page-break-before: always;">
-		<div style="margin-top: 10px;">
-			<label for="selected-tag"><b>Tag of Interest:</b></label>
-			<select id="selected-tag" onchange="updateIsTagSetColumn()">
-				{% for tag in tag_options %}
-					<option value="{{ tag }}" {% if tag == selected_tag %}selected{% endif %}>{{ tag }}</option>
-				{% endfor %}
-			</select>
-		</div>
 	    <table id="canvass-table">
 				<thead>
 
@@ -129,11 +121,7 @@
 					</td>
 
 					<td class="istagset" id="istagset-{{ row['ENOP'] }}">
-					  {% if selected_tag in row['tags'] %}
-					    1
-					  {% else %}
-					    0
-					  {% endif %}
+						    {{row["is_tag_set"]}}
 					</td>
 	      </tr>
 	      {% endfor %}
@@ -149,7 +137,7 @@
 </div>
 <script>
 function updateIsTagSetColumn() {
-  const selectedTag = document.getElementById("selected-tag").value;
+  const selectedTag = document.getElementById("selectedTag").value;
   document.querySelectorAll(".tags").forEach(function(cell) {
     const select = cell.querySelector("select");
     const enop = select.id.split("-")[1];
