--- a/templates/canvasscard1.html
+++ b/templates/canvasscard1.html
@@ -137,12 +137,12 @@
 </div>
 <script>
 function updateIsTagSetColumn() {
-  const selectedTag = document.getElementById("selectedTag").value;
+  const Tags = document.getElementById("Tags").value;
   document.querySelectorAll(".tags").forEach(function(cell) {
     const select = cell.querySelector("select");
     const enop = select.id.split("-")[1];
     const values = Array.from(select.selectedOptions).map(opt => opt.value);
-    const isSet = values.includes(selectedTag) ? "1" : "0";
+    const isSet = values.includes(Tags) ? "1" : "0";
     document.getElementById(`istagset-${enop}`).textContent = isSet;
   });
 }
